--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ tmtags
 ## Bundler
 .bundle/*
 bin/
-vendor/cache/**/*
-vendor/cache/*
+# vendor/cache/**/*
+# vendor/cache/*
 
 ## PROJECT::GENERAL
 coverage
