--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -6,7 +6,7 @@ defaults: &defaults
   #   - host: slave2.local
   #     port: 27019
   # autocreate_indexes: false
-  # allow_dynamic_fields: true
+  allow_dynamic_fields: false
   # include_root_in_json: false
   # parameterize_keys: true
   raise_not_found_error: true
