--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,7 @@
 --- 
-application.css: application-5ac6212d42dbb30d2910303b7d15f13e.css
-print.css: print-3618e432f3ba8550c1298305ce6c3cda.css
-admin.css: admin-b2d5193db3d724bea4f518e92d5e9a83.css
-admin.js: admin-186c57ae6c9bbad3d2243628089b5d8a.js
 application.js: application-07e0548b1cccba1e57015c2fa5aa70c8.js
+curvycorners.js: curvycorners-02a95f24110c9b9b171a156456b94822.js
+print.css: print-3618e432f3ba8550c1298305ce6c3cda.css
+application.css: application-5ac6212d42dbb30d2910303b7d15f13e.css
+admin.js: admin-186c57ae6c9bbad3d2243628089b5d8a.js
+admin.css: admin-b2d5193db3d724bea4f518e92d5e9a83.css
