--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -1,5 +1,5 @@
 defaults: &defaults
-  mintt_sender: mintt@epfl.ch
+  mintt_sender: "Mintt EPFL <mintt@epfl.ch>"
   applications_open: true
   course_dates:
     year_2010:
