Update course program

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -15,9 +15,14 @@ defaults: &defaults
       - 2012-06-06
       - 2012-10-02
     year_2013:
-      - 2013-06-04
-      - 2013-06-05
-      - 2013-10-08
+      day_1:
+        - 2013-06-04
+        - 2013-06-06
+      day_2:
+        - 2013-06-05
+        - 2013-06-07
+      day_3:
+        - 2013-10-08
 
 development:
   <<: *defaults
