Implements content changes of Apr. 1st from Mehdi

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -24,6 +24,15 @@ defaults: &defaults
       day_3:
         - 2013-10-08
         - 2013-10-09
+    year_2014:
+      day_1:
+        - 2014-06-03
+        - 2014-06-04
+      day_2:
+        - 2014-06-11
+        - 2014-06-12
+      day_3:
+        - 2014-10-08
 
 development:
   <<: *defaults
